# artifexprocal

./: .gitignore  ArtifexProCal_Phase2_HAL_Design_Spec.docx  ArtifexProCal_Phase2_HAL_Implementation_Plan.docx  ArtifexProCal_Phase6_Session_Report.docx  ArtifexProCal_Phase7a_Implementation_Plan.docx  ArtifexProCal_Progress_Report.docx  Artifex_ProCal_Progress_Report.docx  CLAUDE.md  Cargo.toml  package-lock.json  package.json
Resources/: LG_OLED_Calibration_App_Implementation_Plan.docx
archive/v1/crates/calibration-core/: Cargo.toml
archive/v1/crates/calibration-core/src/: measure.rs
archive/v1/crates/calibration-engine/: Cargo.toml
archive/v1/crates/calibration-engine/src/: engine.rs  lib.rs
archive/v1/crates/calibration-engine/tests/: events_test.rs  lut3d_flow_test.rs  lut3d_integration_test.rs
archive/v1/crates/color-science/: Cargo.toml
archive/v1/crates/color-science/examples/: debug_de.rs
archive/v1/crates/color-science/src/: adaptation.rs  conversion.rs  gamma.rs  lib.rs  types.rs
archive/v1/crates/hal-patterns/: Cargo.toml
archive/v1/crates/hal-patterns/src/: patterns_catalog.rs  pgenerator.rs  xml_protocol.rs
archive/v1/crates/hal-patterns/tests/: catalog_test.rs
archive/v1/crates/reporting/: Cargo.toml
archive/v1/crates/reporting/src/: assets.rs  pdf.rs  types.rs
archive/v1/crates/reporting/tests/: integration_test.rs  pdf_test.rs
archive/v1/src/: App.tsx
archive/v1/src-tauri-src/: main.rs
crates/app-core/: Cargo.toml
crates/app-core/src/: errors.rs  event_bus.rs  inventory.rs  lib.rs  module.rs  registers.rs  settings.rs
crates/app-core/tests/: integration_test.rs
crates/calibration-autocal/: Cargo.toml
crates/calibration-autocal/src/: export.rs  greyscale.rs  lib.rs  lut.rs  lut3d.rs
crates/calibration-autocal/tests/: export_test.rs  greyscale_test.rs  lut3d_test.rs  lut_test.rs  patch3d_test.rs
crates/calibration-core/: Cargo.toml
crates/calibration-core/src/: lib.rs  patch.rs  state.rs
crates/calibration-core/tests/: core_types_test.rs  measure_test.rs  patch_test.rs
crates/calibration-engine/: Cargo.toml
crates/calibration-engine/src/: autocal_flow.rs  events.rs  lib.rs  lut3d_flow.rs  manual_flow.rs  profiling_flow.rs
crates/calibration-engine/tests/: autocal_flow_test.rs  history_integration_test.rs  lut3d_flow_test.rs  lut3d_integration_test.rs  meter_integration_test.rs  network_protocols_test.rs
crates/calibration-storage/: Cargo.toml
crates/calibration-storage/src/: lib.rs  profiling_session_store.rs  query.rs  reading_store.rs  schema.rs  session_store.rs
crates/calibration-storage/tests/: export_test.rs  query_test.rs  reading_store_test.rs  schema_test.rs  session_store_test.rs
crates/color-science/: Cargo.toml
crates/color-science/examples/: debug_rgb_xyz.rs
crates/color-science/src/: blackbody.rs  cct.rs  cie1931.rs  conversion.rs  delta_e.rs  diagrams.rs  lib.rs  measurement.rs  types.rs
crates/color-science/tests/: integration_tests.rs
crates/hal/: Cargo.toml
crates/hal-displays/: Cargo.toml
crates/hal-displays/src/: calibration_commands.rs  devicecontrol_client.rs  discovery.rs  lg_oled.rs  lib.rs  pairing.rs
crates/hal-displays/tests/: calibration_commands_test.rs  discovery_test.rs  itpg_test.rs  lg_devicecontrol_client_test.rs  lg_oled_test.rs  pairing_test.rs
crates/hal-future-traits/: Cargo.toml
crates/hal-future-traits/src/: display.rs  lib.rs  pattern_gen.rs  types.rs
crates/hal-meters/: Cargo.toml
crates/hal-meters/src/: lib.rs
crates/hal-patterns/: Cargo.toml
crates/hal-patterns/src/: devicecontrol_client.rs  lib.rs  patterns_catalog.rs
crates/hal-patterns/tests/: devicecontrol_client_test.rs  pgenerator_test.rs  xml_protocol_test.rs
crates/hal/src/: error.rs  lib.rs  meter.rs  mocks.rs  traits.rs  types.rs
crates/hal/src/devices/: lg_internal.rs  lg_oled.rs  mod.rs  pgenerator.rs  sony_projector.rs  util.rs  xrite_i1_display_pro.rs  xrite_i1_pro_2.rs
crates/hal/tests/: integration_tests.rs
crates/hal_meters/: Cargo.toml
crates/hal_meters/src/: commands.rs  hid_util.rs  i1_display_pro.rs  i1_pro_2.rs  i1d3_unlock.rs  lib.rs  profiling.rs
crates/hal_meters/tests/: hardware_test.rs  hid_util_test.rs  i1_display_pro_test.rs  i1_pro_2_test.rs
crates/module-meter/: Cargo.toml  README.md
crates/module-meter/src/: export.rs  lib.rs
crates/module-meter/tests/: integration_test.rs
crates/reporting/src/: engine.rs  lib.rs  svg.rs  template.rs
crates/reporting/tests/: integration_test.rs  pdf_test.rs  template_test.rs
docs/: ArtifexProCal-Comprehensive-Progress-Report-Phases-0-7a.docx  ArtifexProCal-Comprehensive-Progress-Report.docx  ArtifexProCal-Phase2-Completion-Report.docx  ArtifexProCal-Phase3a-Design-Spec.docx  ArtifexProCal-Phase3a-Implementation-Plan.docx  ArtifexProCal-Phase3b-Implementation-Plan.docx  ArtifexProCal-Phase3b-Network-Protocols-Design.docx  ArtifexProCal-Progress-Report.docx  Artifex_ProCal_Phase4b_Design.docx  Artifex_ProCal_Progress_Report.docx  LESSONS_LEARNED.md  LG_LUT_FORMAT.md
docs/architecture/: v2-architecture.md
docs/modules/: meter-module.md
docs/schemas/: meter-export-phase1.json
docs/superpowers/plans/: 2026-04-24-phase0-phase1-scaffold-color-science.md  2026-04-24-phase2-hal-implementation.md  2026-04-24-phase3a-calibration-engine.md  2026-04-25-meter-drivers.md  2026-04-25-phase3b-network-protocols.md  2026-04-26-phase4a-tauri-ipc-dashboard.md  2026-04-26-phase4b-calibration-wizard.md  2026-04-26-phase4c-visualization-engine.md  2026-04-26-phase5-real-backend-integration.md  2026-04-27-phase6-3d-lut-generation.md  (+1 more)
src/: App.tsx  bindings.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: bindings_export.rs  lib.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs  models.rs
src-tauri/src/service/: correcting_meter.rs  error.rs  integration_test.rs  mod.rs  state.rs  state_test.rs
src/components/: DashboardShell.tsx  Sidebar.tsx  TopBar.tsx
src/hooks/: useAppState.ts  useTauriEvents.ts
src/lib/: colorMath.test.ts
src/store/: useDashboardStore.ts
(+98 files in other folders)
