[package]
name = "artifexprocal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Professional display calibration software"

[lib]
name = "artifexprocal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-science = { path = "../crates/color-science" }
thiserror = "2"
parking_lot = "0.12"
specta = "=2.0.0-rc.24"
tauri-specta = { version = "=2.0.0-rc.24", features = ["typescript", "javascript"] }
hal = { path = "../crates/hal" }
hal_meters = { path = "../crates/hal_meters" }
hal-displays = { path = "../crates/hal-displays" }
calibration-core = { path = "../crates/calibration-core" }
uuid = { version = "1", features = ["v4"] }
