[package]
name = "artifexprocal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Professional display calibration software"

[lib]
name = "artifexprocal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
