[package]
name = "color-science"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Colorimetric math: conversions, DeltaE, CCT/Duv, blackbody"

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
