[package]
name = "hal-future-traits"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Future HAL traits — design sketches, not yet committed to"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-science = { path = "../color-science" }

[features]
default = []
