[package]
name = "hal"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Hardware abstraction layer traits"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
color-science = { path = "../color-science" }
chrono = { version = "0.4", features = ["serde"] }
