[package]
name = "module-meter"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "MeterModule — CalibrationModule implementation for meters"

[dependencies]
app-core = { path = "../app-core" }
hal = { path = "../hal" }
hal-meters = { path = "../hal-meters" }
color-science = { path = "../color-science" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }
csv = "1"
jsonschema = "0.29"
chrono = "0.4"
