[package]
name = "hal-patterns"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Pattern generator catalog and patch sequences for display calibration"

[dependencies]
hal = { path = "../hal" }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1"
